style(archi): fix flex wrapping

--- a/src/assets/styles/custom/_sizes.scss
+++ b/src/assets/styles/custom/_sizes.scss
@@ -9,3 +9,7 @@
 .max-w-modal {
   max-width: calc(100vw - 2.5rem);
 }
+
+.w-1\/2-gutter-4 {
+  width: calc(50% - .250rem)
+}
